# tdd-fastapi-docker

./: .gitignore  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: main.yml
app/: config.py
project/: .dockerignore  .flake8  Dockerfile  Dockerfile.prod  pyproject.toml  pytest.ini
project/app/: config.py  main.py
project/app/api/: summaries.py
project/db/: create.sql
project/tests/: conftest.py  test_ping.py  test_summaries.py  test_summaries_unit.py
