[tool.poetry]
name = "tdd-fastapi-docker"
version = "0.1.0"
description = "Learning TDD with FastAPI and Docker"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "tdd_fastapi_docker" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = "^0.88.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
asyncpg = "^0.27.0"
tortoise-orm = "^0.19.3"
aerich = "^0.7.1"
requests = "^2.28.1"
httpx = "^0.23.1"
gunicorn = "^20.1.0"
pytest-cov = "^4.0.0"
newspaper3k = "^0.2.8"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
pylint = "^2.15.6"
httpie = "^3.2.1"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-xdist = "^3.1.0"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
